<resources>
    <string name="app_name">AlumnUSU</string>
    <string name="login">Login</string>
    <string name="alumnusu">AlumnUSU</string>
    <string name="image_profile">Logo</string>
    <string name="Masuk">Masuk</string>
    <string name="Daftar">Daftar</string>
    <string name="cari">cari</string>
    <string name="greeting">Selamat Datang!</string>
    <string name="beritausu">Berita USU</string>
    <string name="judulberita1">USU Digital Talent Development Through Huawei ICT Academy</string>
    <string name="beranda">Beranda Alumni</string>
    <string name="ava">foto profil</string>
    <string name="alumni1">Putri Silitonga</string>
    <string name="nim1">151402123</string>
    <string name="fakultas1">FASILKOM-TI</string>
    <string name="TahunMasuk1">2015</string>
    <string name="TahunLulus1">2019</string>
    <string name="ipk1">3.5</string>
    <string name="caption1">Gade lagi buka loker wee</string>
    <string name="alumni2">Charles Simbolon</string>
    <string name="caption2">Info lagu batak mandailing</string>
    <string name="icon">icon</string>
    <string name="NIM">NIM</string>
    <string name="Nama">Nama</string>
    <string name="TahunMasuk">Tahun Masuk</string>
    <string name="TahunLulus">Tahun Lulus</string>
    <string name="IPK">IPK</string>
    <string name="Password">Password</string>
    <string name="Prodi">Program Studi</string>
    <string name="Fakultas">Fakultas</string>
    <string name="prodi1">TI</string>
    <string name="uni1">Universitas Sumatera Utara</string>
    <string name="jenjangS1">Strata-1</string>
    <string name="jenjangS2">Strata-2</string>
    <string name="jenjangS3">Strata-3</string>
    <string name="perusahaan1">Rumah Sakit Setiabudi</string>
    <string name="jabatan1">Staff Administrasi</string>
    <string name="tahunKerja1">2019 - Sekarang</string>
    <string name="title_activity_profile" />
    <string name="tahun">Tahun</string>
    <string name="jenjang">Jenjang</string>
    <string name="universitas">Universitas</string>
    <string name="riwayat_pendidikan">Riwayat Pendidikan</string>
    <string name="jabatan">Jabatan</string>
    <string name="perusahaan">Perusahaan</string>
    <string name="riwayat_pekerjaan">Riwayat Pekerjaan</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="tracer_study">Tracer Study</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="profil">Profil</string>
    <string name="editProfil">Edit Profil</string>
    <string name="angkatan">Angkatan</string>
    <string name="edit">Edit</string>
    <string name="time">13.50</string>
    <string name="soal1">1. Sebutkan status anda saat ini</string>
    <string name="soal2">2. Kapan anda mulai mencari pekerjaan?</string>
    <string name="timex">9.40</string>
    <string name="isiBerita">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.\n \n \n Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry. \n \n \n Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry. \n \n Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selected_item">Selected item:</string>
    <string name="halo_halo">Halo</string>
    <string-array name="fakultas">
        <item>Ilmu Komputer dan Teknologi Informasi</item>
    </string-array>
    <string-array name="programstudi">
        <item>Teknologi Informasi</item>
        <item>Ilmu Komputer</item>
    </string-array>
    <string-array name="tahunMasuk">
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
    </string-array>
    <string name="email">E-mail</string>
    <string name="toRegister">Belum punya akun? Daftar sekarang</string>
    <string name="toLogin">Sudah punya akun? Login disini</string>
</resources>