<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:text="@string/profil"
        android:textColor="#469073"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="57dp" />

    <TableLayout
        android:id="@+id/tableProfile"
        android:layout_below="@id/textView2"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="6">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/foto_putri_silitonga"
                android:contentDescription="@string/ava" />

            <TableLayout

                android:layout_marginStart="20dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/Nama"
                        android:textStyle="bold"
                        android:textColor="#315143"/>
                    <TextView
                        android:layout_marginStart="5dp"
                        android:textColor="#495D65"
                        android:text="@string/alumni1"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textStyle="bold"
                        android:textColor="#315143"
                        android:text="@string/NIM"/>
                    <TextView
                        android:textColor="#495D65"
                        android:layout_marginStart="5dp"
                        android:text="@string/nim1"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textStyle="bold"
                        android:textColor="#315143"
                        android:text="@string/Fakultas"/>

                    <TextView
                        android:layout_width="112dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/fakultas1"
                        android:textColor="#495D65" />

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textStyle="bold"
                        android:textColor="#315143"
                        android:text="@string/Prodi"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/prodi1"
                        android:textColor="#495D65" />

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textStyle="bold"
                        android:textColor="#315143"
                        android:text="@string/TahunMasuk"/>
                    <TextView
                        android:textColor="#495D65"
                        android:layout_marginStart="5dp"
                        android:text="@string/TahunMasuk1"/>

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textStyle="bold"
                        android:textColor="#315143"
                        android:text="@string/TahunLulus"/>
                    <TextView
                        android:textColor="#495D65"
                        android:layout_marginStart="5dp"
                        android:text="@string/TahunLulus1"/>

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textStyle="bold"
                        android:textColor="#315143"
                        android:text="@string/IPK"/>
                    <TextView
                        android:textColor="#495D65"
                        android:layout_marginStart="5dp"
                        android:text="@string/ipk1"/>

                </TableRow>

            </TableLayout>

        </TableRow>
    </TableLayout>
    <TableLayout
        android:id="@+id/tableButton"
        android:layout_alignStart="@id/tableProfile"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tableProfile">

        <TableRow>

            <Button
                android:id="@+id/Edit_Profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ubah_profil"
                android:textAllCaps="false"
                android:backgroundTint="@color/teal_700"
                android:onClick="editProfile"/>

            <Button
                android:id="@+id/Tracer_Study"
                android:layout_marginStart="10dp"
                android:text="@string/tracer_study"
                android:textAllCaps="false"
                android:backgroundTint="@color/teal_700"/>

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tableButton"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/pendidikan"
        android:textColor="#469073"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="57dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view1"
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@id/textView3"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="15dp">

        <TextView
            android:id="@+id/pendidikan_text1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/riwayat_pendidikan"
            android:textColor="#315143"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp">

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:text="@string/universitas"
                    android:textColor="#315143" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:text="@string/uni1"
                    android:textColor="#495D65" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:text="@string/jenjang"
                    android:textColor="#315143" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:text="@string/jenjangS1"
                    android:textColor="#495D65" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:text="@string/tahun"
                    android:textColor="#315143" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:text="@string/TahunMasuk1"
                    android:textColor="#495D65" />
            </TableRow>
        </TableLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_below="@id/card_view1"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/pekerjaan"
        android:textColor="#469073"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="57dp" />
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view2"
        android:layout_gravity="center"
        android:layout_alignStart="@id/textView4"
        android:layout_marginTop="25dp"
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:layout_below="@id/textView4"
        app:cardElevation="15dp"
        app:cardCornerRadius="25dp">

        <TextView
            android:id="@+id/pekerjaan_text1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textColor="#315143"
            android:textStyle="bold"
            android:text="@string/riwayat_pekerjaan" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp">

            <TableRow
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:textColor="#315143"
                    android:text="@string/perusahaan"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:textColor="#495D65"
                    android:text="@string/uni1"/>

            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:textColor="#315143"
                    android:text="@string/jabatan"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:textColor="#495D65"
                    android:text="@string/jabatan1"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:textColor="#315143"
                    android:text="@string/tahun"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:textColor="#495D65"
                    android:text="@string/tahunKerja1"/>
            </TableRow>
        </TableLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>