<?xml version="1.0" encoding="utf-8"?>

<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile">

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="55dp"
      android:text="@string/editProfil"
      android:textColor="#469073"
      android:textSize="20sp"
      android:textStyle="bold"
      tools:layout_editor_absoluteX="35dp"
      tools:layout_editor_absoluteY="57dp" />

  <TableLayout
      android:id="@+id/tableProfile"
      android:layout_below="@id/textView2"
      android:layout_marginTop="25dp"
      android:layout_marginStart="25dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="6">

      <ImageView
          android:layout_width="100dp"
          android:layout_height="100dp"
          android:layout_marginStart="10dp"
          android:layout_marginTop="5dp"
          android:src="@drawable/foto_putri_silitonga"
          android:contentDescription="@string/ava" />

      <TableLayout

          android:layout_marginStart="20dp"
          android:layout_width="200dp"
          android:layout_height="wrap_content"
          android:layout_weight="1.5">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

          <TextView
              android:text="@string/Nama"
              android:textSize="18sp"
              android:textStyle="bold"
              android:textColor="#315143"/>
          <TextView
              android:layout_marginStart="5dp"
              android:textSize="18sp"
              android:textColor="#495D65"
              android:text="@string/alumni1"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

          <TextView
              android:textStyle="bold"
              android:textSize="18sp"
              android:textColor="#315143"
              android:text="@string/NIM"/>
          <TextView
              android:textColor="#495D65"
              android:textSize="18sp"
              android:layout_marginStart="5dp"
              android:text="@string/nim1"/>

        </TableRow>
      </TableLayout>

    </TableRow>
  </TableLayout>
  <TableLayout
      android:id="@+id/tableButton"
      android:layout_alignStart="@id/tableProfile"
      android:layout_marginTop="15dp"
      android:layout_marginStart="25dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/tableProfile">

    <TableRow>

      <LinearLayout

          android:layout_width="310dp"
          android:layout_height="match_parent"

          android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fakultas"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/Fakultas"
            app:endIconMode="clear_text"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="144dp">

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/programstudi"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/Prodi"
            app:endIconMode="clear_text"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="144dp">

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/angkatan"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/angkatan"
            app:endIconMode="clear_text"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="144dp">

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tahunLulus"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/TahunLulus"
            app:endIconMode="clear_text"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="144dp">

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ipk"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/IPK"
            app:endIconMode="clear_text"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="144dp">

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_marginTop="10dp"
            android:elevation="15dp"
            app:cardElevation="200dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardCornerRadius="10dp">

          <TextView
              android:id="@+id/info_text"
              android:textSize="20dp"
              android:textAlignment="center"
              android:textStyle="bold"
              style="@style/Theme.Material3.DynamicColors.Dark"
              android:text="Visibility Status"
              android:layout_width="match_parent"
              android:layout_height="match_parent" />

          <CheckBox
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/info_text"
              android:layout_marginLeft="20dp"
              android:layout_marginTop="30dp"
              android:text="@string/TahunLulus" />

          <CheckBox
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="60dp"
              android:text="@string/IPK"
              android:layout_marginLeft="20dp"/>
        </androidx.cardview.widget.CardView>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:backgroundTint="@color/teal_700"
    android:text="@string/edit"/>

      </LinearLayout>

    </TableRow>
  </TableLayout>



</RelativeLayout>